--- a/loplex-gse-QuickLaunch@github.com/README
+++ b/loplex-gse-QuickLaunch@github.com/README
@@ -1,6 +1,6 @@
 = NAME =
 
-QuickLaunch@github.com
+loplex-gse-QuickLaunch@github.com
 
 = DESCRIPTION =
 
@@ -12,7 +12,7 @@ To populate the popup menu, put .desktop files into ~/.local/share/gnome-shell/q
 
 = INSTALL =
 
-1. Put this folder below ~/.local/share/gnome-shell/extensions/ and rename it to QuickLaunch@github.com
+1. Put this folder below ~/.local/share/gnome-shell/extensions/ and rename it to loplex-gse-QuickLaunch@github.com
 
 2. create ~/.local/share/gnome-shell/quicklaunch and put a few .desktop files in there
 
